# QRSXTJYY

./: .gitignore  .gitmodules  Cargo.toml  README.md
EXP/EXP_2/: README.md
EXP/EXP_2/Music2Beep/: Cargo.toml  ハルジオン.mid
EXP/EXP_2/Music2Beep/src/: main.rs
EXP/EXP_3/Q1/: CMakeLists.txt
EXP/EXP_3/Q2/: CMakePresets.json
EXP/EXP_3/Q3/: CMakeLists.txt  drivers
EXP/EXP_3/Q5/: CMakeLists.txt
EXP/EXP_3/Q6/: CMakeLists.txt
EXP/EXP_3/Q7/: CMakeLists.txt  cmake  startup
EXP/EXP_4/[C]SERIAL_TRANSMISSION/: tools
EXP/EXP_4/[Rust]SERIAL_TRANSMISSION/: Embed.toml  build.rs  memory.x
EXP/EXP_4/[Rust]SERIAL_TRANSMISSION/src/: main.rs
EXP/EXP_5/[C]SOFTWARE_CLOCK/: CMakeLists.txt  CMakePresets.json  linker
EXP/EXP_5/[Rust]SOFTWARE_CLOCK/: Cargo.toml
EXP/EXP_5/[Rust]SOFTWARE_CLOCK/.cargo/: config.toml
EXP/EXP_5/[Rust]SOFTWARE_CLOCK/src/: main.rs
EXP_1/MORSE_CODE_LIGHTS/: CMakeLists.txt  CMakePresets.json  cmake
EXP_2/BEEP-BEEP/: CMakeLists.txt  CMakePresets.json  drivers
EXP_2/Music2Beep/src/: midi_parser.rs  writer.rs
EXP_3/Q1/: startup
EXP_3/Q2/: CMakeLists.txt
EXP_3/Q3/: tools
EXP_3/Q4/: CMakeLists.txt
EXP_3/Q4/core/src/: main.c
EXP_3/Q6/: linker
EXP_3/Q7/: linker
EXP_4/[C]SERIAL_TRANSMISSION/: CMakeLists.txt
EXP_4/[Rust]SERIAL_TRANSMISSION/: Cargo.toml  Embed.toml  README.md  build.rs  memory.x
EXP_4/[Rust]SERIAL_TRANSMISSION/.cargo/: config.toml
EXP_4/[Rust]SERIAL_TRANSMISSION/src/: main.rs
utils/c/cmake/: gcc-arm-none-eabi.cmake
utils/rust/: Embed.toml  build.rs  memory.x
utils/rust/.cargo/: config.toml
(+24 files in other folders)
